Closed
Bug 424093
Opened 17 years ago
Closed 17 years ago
CNN Video page will not load
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta5
People
(Reporter: jmjjeffery, Assigned: dcamp)
References
()
Details
(Keywords: regression, top100)
Attachments
(1 file, 1 obsolete file)
|
4.10 KB,
patch
|
enndeakin
:
review+
jst
:
superreview+
beltzner
:
approval1.9b5+
|
Details | Diff | Splinter Review |
Going to the URL www.cnn.com and choosing any video on the page should load the video of choice.
Page does not load. Using the usual UA tricks do not work and page staying 'loading...'
general.useragent.extra.firefox Minefield/3.0b5pre Firefox/3.0
general.useragent.extra.notfox;Firefox/2.0.0.12
If someone could help with a regress range please..
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008032001 Minefield/3.0b5pre Firefox/3.0 Firefox/2.0.0.12 ID:2008032001
Vista HP SP1
Flags: blocking-firefox3?
| Reporter | ||
Updated•17 years ago
|
Summary: Video page will not load → CNN Video page will not load
Verified.
Message received instead of video;
[quote]The web browser you are using to view this video is not supported. Please use one of the supported browsers:
Windows Microsoft Internet Explorer 6 and above
Firefox 1.5 and above[/quote]
------------------------------------------------
Spoofing the useragent (Fx v1.5, v2.0.0.12, IE 6, or 7) will result in a black frame with no video and the page goes into an endless page loading loop.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008031905 Minefield/3.0b5pre
In the error console I see this message:
[quote]
Security Error: Content at http://i.cdn.turner.com/cnn/.element/js/2.0/main.js may not load data from http://edition.cnn.com/video/#/video/politics/2008/03/20/cooper.raw.politics.cnn.
[/quote]
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008031905 Minefield/3.0b5pre
Comment 3•17 years ago
|
||
Works with: 20080318_1826_firefox-3.0b5pre.en-US.win32
Broken with: 20080319_0326_firefox-3.0b5pre.en-US.win32
Checkins to module PhoenixTinderbox between 2008-03-18 18:26 and 2008-03-19 03:25 :
http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1205889960&maxdate=1205922359
Error console throws nothing interesting for me.
Comment 4•17 years ago
|
||
This is a very recent regression that impacts at least one Alexa Top-100 site (CNN), so I'm going to request it blocks beta 5.
Target Milestone: --- → Firefox 3 beta5
Comment 5•17 years ago
|
||
In that range, I suspect bug 407839, and Enn confirms that CNN does use DOMStorage stuff.
Dave? Can you check into this?
(blocking b5 pending further investigation)
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P1
Updated•17 years ago
|
Updated•17 years ago
|
Assignee: nobody → dcamp
| Assignee | ||
Comment 6•17 years ago
|
||
Attachment #310775 -
Flags: superreview?(jst)
Attachment #310775 -
Flags: review?(enndeakin)
| Assignee | ||
Updated•17 years ago
|
Attachment #310775 -
Flags: superreview?(jst)
Attachment #310775 -
Flags: review?(enndeakin)
| Assignee | ||
Comment 7•17 years ago
|
||
fixed a bug, added some tests.
Attachment #310775 -
Attachment is obsolete: true
Attachment #310797 -
Flags: superreview?(jst)
Attachment #310797 -
Flags: review?(enndeakin)
Updated•17 years ago
|
Status: NEW → ASSIGNED
Component: General → DOM: Mozilla Extensions
Flags: blocking-firefox3+
Product: Firefox → Core
QA Contact: general → general
Target Milestone: Firefox 3 beta5 → mozilla1.9beta5
Updated•17 years ago
|
Flags: blocking1.9?
Updated•17 years ago
|
Flags: blocking1.9? → blocking1.9+
Comment 8•17 years ago
|
||
Comment on attachment 310797 [details] [diff] [review]
v2
Seems OK
Attachment #310797 -
Flags: review?(enndeakin) → review+
Updated•17 years ago
|
Attachment #310797 -
Flags: superreview?(jst) → superreview+
Updated•17 years ago
|
Attachment #310797 -
Flags: approval1.9b5?
Comment 9•17 years ago
|
||
Comment on attachment 310797 [details] [diff] [review]
v2
a=beltzner
Attachment #310797 -
Flags: approval1.9b5? → approval1.9b5+
Comment 11•17 years ago
|
||
Checking in dom/src/storage/nsDOMStorage.cpp;
/cvsroot/mozilla/dom/src/storage/nsDOMStorage.cpp,v <-- nsDOMStorage.cpp
new revision: 1.26; previous revision: 1.25
done
Checking in dom/tests/mochitest/bugs/Makefile.in;
/cvsroot/mozilla/dom/tests/mochitest/bugs/Makefile.in,v <-- Makefile.in
new revision: 1.25; previous revision: 1.24
done
RCS file: /cvsroot/mozilla/dom/tests/mochitest/bugs/iframe_bug424093.html,v
done
Checking in dom/tests/mochitest/bugs/iframe_bug424093.html;
/cvsroot/mozilla/dom/tests/mochitest/bugs/iframe_bug424093.html,v <-- iframe_bug424093.html
initial revision: 1.1
done
RCS file: /cvsroot/mozilla/dom/tests/mochitest/bugs/test_bug424093.html,v
done
Checking in dom/tests/mochitest/bugs/test_bug424093.html;
/cvsroot/mozilla/dom/tests/mochitest/bugs/test_bug424093.html,v <-- test_bug424093.html
initial revision: 1.1
done
| Assignee | ||
Comment 12•17 years ago
|
||
When verifying this bug: I still needed to tweak the useragent to get cnn to work in minefield.
| Reporter | ||
Comment 13•17 years ago
|
||
Still does not work for me..
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008032101 Minefield/3.0b5pre Firefox/3.0 Firefox/2.0.0.12 ID:2008032101
Same as before... stuck 'loading'...
| Reporter | ||
Comment 14•17 years ago
|
||
Re-opening - no errors are noted in the Error console -
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Reporter | ||
Comment 15•17 years ago
|
||
Sorry, works with a new Profile and an Agent tweak -
Status: REOPENED → RESOLVED
Closed: 17 years ago → 17 years ago
Resolution: --- → FIXED
Comment 16•17 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008032101 Minefield/3.0b5pre ID:2008032101
Now WFM (with the user agent faking)
--> VERIFIED
Status: RESOLVED → VERIFIED
Ugh, i really hate using document.domain :(
It's a gross hack that I'd really like to see erased from the web and it sucks that we have to make this brand new feature depend on it.
Is there any way we can evangelize this one instead?
Comment 18•17 years ago
|
||
I'm not sure whether how relevant this is, but I thought I'd post it.
I have a machine running RHEL 5.2 on a Pentium 4 (ia32). RHEL 5 originally provided the RPM for Firefox 1.5 and I was able to view CNN videos using this along with the flash-plugin provided by RHEL 5.
Several months ago when RHEL 5 pushed out Minefield as an upgrade for Firefox 1.5, I remember that I was no longer able to view CNN flash videos. I manually installed Firefox 2.0 and found that with Firefox 2.0 I was able to view CNN videos, so I switched to Firefox 2.0 and did not use Minefield. (I kept the Minefiled RPM installed, but didn't use it.)
Last week RHEL 5 pushed out the firefox-3.0-2.el5 RPM, replacing the Minefield RPM. I gave this a try and again found that CNN videos didn't work. Videos on other website worked without problem.
I then found that creating a new profile fixed the problem. Further investigation showed that my prefs.js file had the line
user_pref("network.cookie.lifetimePolicy", 1);
and if I kept the old profile but deleted this line or changed its value, I am to view CNN videos. In other words, if Preferences->Privacy->Cookies->Keep third-party cookies == ask me every time, then CNN videos will not load--I get a big black rectangle where the video should display, and no thumbnail video catalog at the bottom of the CNN video page.
Comment 19•17 years ago
|
||
There are other callsites in this code that probably need similar fixes: see bug 462800.
Updated•12 years ago
|
Component: DOM: Mozilla Extensions → DOM
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•