Bug 424093 - "CNN Video page will not load" [p=dcamp@mozilla.com (Dave Camp) r=Enn sr=jst a1.9b5=beltzner]